<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
 <ProgressBar
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/pb_loading"
     android:layout_centerInParent="true"
     android:visibility="gone">
 </ProgressBar>
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
  android:id="@+id/rl_main_layout">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="80dp"
 android:id="@+id/vc_toolbar"
 android:elevation="@dimen/padding_x_large">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
  android:id="@+id/toolbar"
  android:background="@color/purple_200">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="60dp"
 android:layout_margin="@dimen/padding_large"
 app:cardCornerRadius="@dimen/padding_x_small">
 <EditText
     android:layout_width="match_parent"
     android:layout_height="match_parent"
  android:id="@+id/edit_city_name"
  android:hint="@string/searchplaces"
  android:drawableStart="@drawable/ic_baseline_search_24"
  android:drawablePadding="@dimen/padding_large"
     android:imeOptions="actionSearch"
     android:inputType="text"
     android:paddingStart="@dimen/padding_large"
     android:paddingEnd="@dimen/padding_large"
     android:drawableTint="@color/black"
     android:background="@color/white">
 </EditText>
</androidx.cardview.widget.CardView>
 </RelativeLayout>
</androidx.cardview.widget.CardView>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/rl_sub_layout"
      android:layout_below="@id/vc_toolbar">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <ImageView
     android:id="@+id/iv_weather_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="centerCrop">

 </ImageView>

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 android:layout_marginTop="@dimen/padding_large"
 android:layout_marginStart="@dimen/padding_x_large"
 android:orientation="vertical">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
  android:id="@+id/tv_date_and_time"
  android:fontFamily="@font/caveat_brush"
  android:textColor="@color/black"
  android:textSize="30dp"
  android:text="@string/demo_date">
 </TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 android:layout_marginTop="@dimen/padding_large"
 android:orientation="horizontal">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="3"
  android:id="@+id/tv_day_max_temp"
  android:fontFamily="@font/bebas"
  android:text="@string/day"
     android:textColor="@color/black"
  android:textSize="35dp">
 </TextView>
</LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/padding_large"
     android:orientation="horizontal">
  <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:id="@+id/tv_temp"
      android:fontFamily="@font/bebas"
      android:text="@string/main_temp"
      android:textColor="@color/black"
      android:textSize="@dimen/text_super_large">
  </TextView>
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
android:layout_marginTop="@dimen/padding_large"
 android:layout_marginEnd="@dimen/padding_large"
 android:id="@+id/iv_weather_icon"
 android:src="@drawable/clear">
</ImageView>
 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/padding_large"
     android:orientation="horizontal">
  <TextView
      android:id="@+id/tv_feels_like"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:fontFamily="@font/caveat_brush"
      android:text="@string/fells_like"
      android:textColor="@color/black"
      android:textSize="@dimen/text_large">
  </TextView>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/tv_weather_type"
      android:layout_weight="3"
      android:textAllCaps="false"
      android:fontFamily="@font/caveat_brush"
      android:text="@string/drizzle"
      android:textColor="@color/black"
      android:textSize="@dimen/text_large">
  </TextView>
 </LinearLayout>
</LinearLayout>
</FrameLayout>
   <com.google.android.material.card.MaterialCardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="@dimen/padding_x_large"
    android:layout_marginTop="50dp"
    android:layout_marginRight="@dimen/padding_x_large"
    android:layout_marginBottom="@dimen/padding_x_large"
    android:elevation="@dimen/padding_x_small"
    app:cardCornerRadius="@dimen/padding_large"
    app:cardMaxElevation="@dimen/padding_x_small"
    app:cardElevation="@dimen/padding_x_small">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
      android:id="@+id/ll_main_bg_above"
      android:layout_marginTop="0dp"
      android:background="@drawable/snow_bg"
      android:orientation="horizontal">


      <RelativeLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="@dimen/padding_x_small"
    android:id="@+id/rl_temp_farenhit_wrapper">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:orientation="vertical"
           android:padding="@dimen/padding_x_small">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pressure">

        </ImageView>

        <TextView
            android:id="@+id/tv_temp_farenhit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center"
            android:text="@string/default_numbers"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas"
            android:gravity="center"
            android:text="@string/pressure"

            android:textColor="@color/white"
            android:textSize="@dimen/text_large">

        </TextView>


       </LinearLayout>






   </RelativeLayout>
      <RelativeLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="@dimen/padding_x_small"
          android:id="@+id/rl_humidity_wrapper">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:orientation="vertical"
           android:padding="@dimen/padding_x_small">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/humidity">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_humidity"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat_brush"
            android:textSize="@dimen/text_large"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/default_numbers">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas"
            android:textSize="@dimen/text_large"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/humidty">
        </TextView>
       </LinearLayout>
      </RelativeLayout>
      <RelativeLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="@dimen/padding_x_small"
          android:id="@+id/rl_wind_speed_wrapper">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:orientation="vertical"
           android:padding="@dimen/padding_x_small">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/windspeed"></ImageView>

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caveat_brush"
            android:gravity="center"
            android:text="@string/default_numbers"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas"
            android:gravity="center"
            android:text="@string/Wind_Speed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large">

        </TextView>


       </LinearLayout>








      </RelativeLayout>
     </LinearLayout>

    </LinearLayout>
   </com.google.android.material.card.MaterialCardView>
  </RelativeLayout>

 </RelativeLayout>
</RelativeLayout>